[package]
name = "xtr-log-viewer"
version = "1.0.0"
edition = "2021"
description = "Fast XTR/CARIAD log viewer — zero runtime dependencies"

[[bin]]
name = "logviewer"
path = "src/main.rs"

[dependencies]
eframe   = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui     = "0.27"
rfd      = "0.14"

[profile.release]
opt-level   = 3
lto         = "thin"
codegen-units = 1
strip       = true
panic       = "abort"
