[package]
name = "log-viewer"
version = "1.0.0"
edition = "2024"
description = "Fast log viewer — zero runtime dependencies"
authors = ["Mohamed Amine Said"]
license = "MIT"
repository = "https://github.com/moumoudark190-cloud/xtr-log-viewer"
readme = "README.md"

[[bin]]
name = "logviewer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",      
    "wgpu",
] }
egui = "0.27"
rfd = "0.14"
image = "0.25"        
regex = "1.10"

# Optional: Better performance
[profile.dev]
opt-level = 1          # Slightly optimize debug builds
debug = true

[profile.release]
opt-level = 3
lto = "thin"           # Good balance between speed and compile time
codegen-units = 1      # Better optimization
strip = true           # Remove debug symbols
panic = "abort"        # Smaller binaries
overflow-checks = false # Slightly faster

# For minimal binary size (if needed)
[profile.release.min-size]
inherits = "release"
opt-level = "z"        
lto = "fat"            
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
winres = "0.1"

# Optional: Add icon to Windows executable
[package.metadata.winres]
icon = "assets/logo.ico"
